err/gns3-gui.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/gns3'...
Listing './lib/python3.5/site-packages/gns3/dialogs'...
Listing './lib/python3.5/site-packages/gns3/items'...
Listing './lib/python3.5/site-packages/gns3/modules'...
Listing './lib/python3.5/site-packages/gns3/modules/builtin'...
Listing './lib/python3.5/site-packages/gns3/modules/builtin/dialogs'...
Listing './lib/python3.5/site-packages/gns3/modules/builtin/pages'...
Listing './lib/python3.5/site-packages/gns3/modules/builtin/ui'...
Listing './lib/python3.5/site-packages/gns3/modules/builtin/utils'...
Listing './lib/python3.5/site-packages/gns3/modules/docker'...
Listing './lib/python3.5/site-packages/gns3/modules/docker/dialogs'...
Listing './lib/python3.5/site-packages/gns3/modules/docker/pages'...
Listing './lib/python3.5/site-packages/gns3/modules/docker/ui'...
Listing './lib/python3.5/site-packages/gns3/modules/dynamips'...
Listing './lib/python3.5/site-packages/gns3/modules/dynamips/dialogs'...
Listing './lib/python3.5/site-packages/gns3/modules/dynamips/nodes'...
Listing './lib/python3.5/site-packages/gns3/modules/dynamips/pages'...
Listing './lib/python3.5/site-packages/gns3/modules/dynamips/ui'...
Listing './lib/python3.5/site-packages/gns3/modules/dynamips/utils'...
Listing './lib/python3.5/site-packages/gns3/modules/iou'...
Listing './lib/python3.5/site-packages/gns3/modules/iou/dialogs'...
Listing './lib/python3.5/site-packages/gns3/modules/iou/pages'...
Listing './lib/python3.5/site-packages/gns3/modules/iou/ui'...
Listing './lib/python3.5/site-packages/gns3/modules/qemu'...
Listing './lib/python3.5/site-packages/gns3/modules/qemu/dialogs'...
Listing './lib/python3.5/site-packages/gns3/modules/qemu/pages'...
Listing './lib/python3.5/site-packages/gns3/modules/qemu/ui'...
Listing './lib/python3.5/site-packages/gns3/modules/virtualbox'...
Listing './lib/python3.5/site-packages/gns3/modules/virtualbox/dialogs'...
Listing './lib/python3.5/site-packages/gns3/modules/virtualbox/pages'...
Listing './lib/python3.5/site-packages/gns3/modules/virtualbox/ui'...
Listing './lib/python3.5/site-packages/gns3/modules/vmware'...
Listing './lib/python3.5/site-packages/gns3/modules/vmware/dialogs'...
Listing './lib/python3.5/site-packages/gns3/modules/vmware/pages'...
Listing './lib/python3.5/site-packages/gns3/modules/vmware/ui'...
Listing './lib/python3.5/site-packages/gns3/modules/vpcs'...
Listing './lib/python3.5/site-packages/gns3/modules/vpcs/dialogs'...
Listing './lib/python3.5/site-packages/gns3/modules/vpcs/pages'...
Listing './lib/python3.5/site-packages/gns3/modules/vpcs/ui'...
Listing './lib/python3.5/site-packages/gns3/pages'...
Listing './lib/python3.5/site-packages/gns3/ports'...
Listing './lib/python3.5/site-packages/gns3/qt'...
Listing './lib/python3.5/site-packages/gns3/registry'...
Listing './lib/python3.5/site-packages/gns3/schemas'...
Listing './lib/python3.5/site-packages/gns3/static'...
Listing './lib/python3.5/site-packages/gns3/ui'...
Listing './lib/python3.5/site-packages/gns3/utils'...
Listing './lib/python3.5/site-packages/gns3_gui-2.1.2.egg-info'...
Listing './lib/python3.5/site-packages/jsonschema'...
Listing './lib/python3.5/site-packages/jsonschema/schemas'...
Listing './lib/python3.5/site-packages/jsonschema/tests'...
Listing './lib/python3.5/site-packages/jsonschema-2.6.0.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/psutil'...
Listing './lib/python3.5/site-packages/psutil/tests'...
Listing './lib/python3.5/site-packages/psutil-5.4.3.egg-info'...
Listing './lib/python3.5/site-packages/raven'...
Listing './lib/python3.5/site-packages/raven/conf'...
Listing './lib/python3.5/site-packages/raven/contrib'...
Listing './lib/python3.5/site-packages/raven/contrib/awslambda'...
Listing './lib/python3.5/site-packages/raven/contrib/bottle'...
Listing './lib/python3.5/site-packages/raven/contrib/celery'...
Listing './lib/python3.5/site-packages/raven/contrib/django'...
Listing './lib/python3.5/site-packages/raven/contrib/django/celery'...
Listing './lib/python3.5/site-packages/raven/contrib/django/management'...
Listing './lib/python3.5/site-packages/raven/contrib/django/management/commands'...
Listing './lib/python3.5/site-packages/raven/contrib/django/middleware'...
Listing './lib/python3.5/site-packages/raven/contrib/django/raven_compat'...
Listing './lib/python3.5/site-packages/raven/contrib/django/raven_compat/management'...
Listing './lib/python3.5/site-packages/raven/contrib/django/raven_compat/management/commands'...
Listing './lib/python3.5/site-packages/raven/contrib/django/raven_compat/middleware'...
Listing './lib/python3.5/site-packages/raven/contrib/django/raven_compat/templatetags'...
Listing './lib/python3.5/site-packages/raven/contrib/django/templatetags'...
Listing './lib/python3.5/site-packages/raven/contrib/pylons'...
Listing './lib/python3.5/site-packages/raven/contrib/tornado'...
Listing './lib/python3.5/site-packages/raven/contrib/webpy'...
Listing './lib/python3.5/site-packages/raven/contrib/zconfig'...
Listing './lib/python3.5/site-packages/raven/contrib/zerorpc'...
Listing './lib/python3.5/site-packages/raven/contrib/zope'...
Listing './lib/python3.5/site-packages/raven/data'...
Compiling './lib/python3.5/site-packages/raven/deprecation.py'...
***   File "./lib/python3.5/site-packages/raven/deprecation.py", line 6
    def __init__(self, dsn, *args, **kwargs):
                                            ^
SyntaxError: unexpected EOF while parsing

Listing './lib/python3.5/site-packages/raven/handlers'...
Listing './lib/python3.5/site-packages/raven/scripts'...
Listing './lib/python3.5/site-packages/raven/transport'...
Listing './lib/python3.5/site-packages/raven/utils'...
Listing './lib/python3.5/site-packages/raven/utils/serializer'...
Listing './lib/python3.5/site-packages/raven-6.4.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
